# arista-lab

./: .gitignore  .gitmodules  Makefile  README.md  lab  pyproject.toml  requirements.txt  topology.yaml
arista_lab/: ceos.py  cli.py  cloudvision.py  config.py  docker.py  traffic.py
arista_lab/config/: __init__.py  interfaces.py  peering.py
ceos_lab/: cli.py  cloudvision.py  config.py
inventory/: defaults.yaml  hosts.yaml
project/: .gitignore  Makefile  nornir.yaml  topology.clab.yml  topology.yaml
project/configs/l3ls-fabric/: leaf1.cfg  leaf2.cfg  leaf3.cfg  leaf4.cfg  spine1.cfg  spine2.cfg
project/inventory/: groups.yaml  hosts.yaml
project/startup/: leaf1.cfg  leaf2.cfg  leaf3.cfg  leaf4.cfg  spine1.cfg  spine2.cfg
templates/onboard/: TerminAttr.j2  default-gateway.j2  dns-server.j2
tests/: test_arista_lab.py  test_ceos_lab.py
tools/: cloudvision.py  config.py
