[tool.poetry]
name = "ceos-lab"
version = "0.1.0"
description = ""
authors = ["Matthieu Tache <mtache@arista.com>"]

[tool.poetry.scripts]
lab = 'ceos_lab.cli:cli'

[tool.poetry.dependencies]
python = "^3.8"
nornir = "^3.3.0"
click = "^8.1.3"
PyYAML = "^6.0"
rich = "^12.5.1"
nornir-napalm = "^0.3.0"
nornir-jinja2 = "^0.2.0"
nornir-rich = "^0.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
