[tool.poetry]
name = "arista-lab"
version = "0.2.0"
description = "Simple tooling when working with EOS in labs"
authors = ["Matthieu Tache <mtache@arista.com>"]

[tool.poetry.scripts]
lab = 'arista_lab.cli:main'

[tool.poetry.dependencies]
python = "~3.12" # snappi has grpcio 1.59.5 as dependecy that prevent from building this project for Python 3.13 on macOS https://github.com/open-traffic-generator/snappi/issues/236
click = "~8.1"
PyYAML = "^6"
rich = "~13.7"
nornir-napalm = "^0.5"
nornir-jinja2 = "^0.2"
docker = "^7"
requests = "^2.32"
openpyxl = "^3.1.2"
snappi = "^1.20.1"
snappi-ixnetwork = { path = "../snappi-ixnetwork" } # Until https://github.com/open-traffic-generator/snappi-ixnetwork/pull/588 is merged and https://github.com/open-traffic-generator/snappi-ixnetwork/issues/589

[tool.poetry.dev-dependencies]
mypy = "^1.8"
types-PyYAML = "^6"
types-requests = "^2.31"
ruff = "^0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"